--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Chonburi&display=swap" rel="stylesheet">
 
+  
 </head>
 
 <body>
@@ -33,28 +35,84 @@
     </div>
   </nav>
 
+
+
+
   <!-- Intro -->
 
-  <div id="intro" class="container-fluid d-flex p-5">
+    <div id="intro" class="container-fluid d-flex p-5 text-center ">
 
-    <div id="intro-text" class="m-0 ml-md-5 mr-md-5 text-center text-md-left">
-      <h1 class="m-0 mt-md-4 ml-md-5">Hi, I'm Marta Vidal!</h1>
-      <h2 class="m-0 ml-md-5 mt-3">Front end developer & UI designer</h2>
+        <div id="flex-intro" class="pt-5 ">
+            <!--Manchas flotando-->
+            <div id="stain-container">
+
+                <div class="stain" id="up-yellow-stain">
+                    <img src="img/svg/Recurso 2.svg" alt="up-yellow-stain" />
+                </div>
+
+                <div class="stain" id="up-pink-stain">
+                    <img src="img/svg/Recurso 3.svg" alt="up-pink-stain" />
+                </div>
+                <div class="stain" id="up-blue-stain">
+                    <img src="img/svg/Recurso1.svg" alt="up-blue-stain" />
+                </div>
 
 
-      <div class="ml-5 mt-4 w-50 d-none d-md-block">
 
-        <p>Positiva, alegre y dinámica. Siempre he apostado por el aprendizaje continuo. Después de años en el mundo de
-          la comunicación, marketing y diseño, he unificado
-          mi experiencia y capacidades dando un giro a mi carrera hacia el desarrollo Front-End.</>
-      </div>
+                <div class="stain" id="down-yellow-stain">
+                    <img src="img/svg/Recurso 7.svg " alt="up-yellow-stain" />
+                </div>
 
-      <button class="mt-5 ml-md-5" onclick="window.location.href = 'https://www.linkedin.com/in/mavidelaru/';">MÁS
-        SOBRE MI</button>
+                <div class="stain" id="down-pink-stain">
+                    <img src="img/svg/Recurso 5.svg" alt="up-pink-stain" />
+                </div>
+                <div class="stain" id="down-blue-stain">
+                    <img src="img/svg/Recurso1.svg" alt="up-blue-stain" />
+                </div>
+
+            </div>
+
+
+
+            <div id="position-text">
+
+                <div class="  ">
+
+                    <h1 class=" mt-md-4 ml-md-5 ">Hi, I'm Marta Vidal!</h1>
+                    <h2 class=" ml-md-5 mt-3">Front end developer & UI designer</h2>
+
+
+                    <div class=" mt-5 m-d p-5 d-none text-center d-md-inline">
+
+                        <p class="mt-4">Positiva, alegre y dinámica. Siempre he apostado por el aprendizaje continuo.
+                            Después de años en el
+                            mundo de
+                            la comunicación, marketing y diseño, he unificado
+                            mi experiencia y capacidades dando un giro a mi carrera hacia el desarrollo Front-End.</>
+                    </div>
+
+                    <button class="mt-5  onclick=" window.location.href='https://www.linkedin.com/in/mavidelaru/' ;">MÁS
+                        SOBRE MI</button>
+
+                </div>
+            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        </div>
+
     </div>
-
-  </div>
-
 
 
 
