Changing the padding of the skills and moving again the stains

--- a/about.html
+++ b/about.html
@@ -132,7 +132,7 @@
 
                         <!------- SKILLS-------->
 
-                        <div id="skills" class="p-5">
+                        <div id="skills" class="pb-2 pt-5 pl-5 pr-5">
                             <div class="row d-flex justify-content-center ">
 
                                 <div class="d-flex col-5 col-sm-3 col-md-2 col-xl-1 m-2 m-md-3 m-xl-4  justify-content-center"
