--- a/portfolio.html
+++ b/portfolio.html
@@ -64,13 +64,13 @@
 
 
   <div id="portfolio" class="container-fluid pb-5">
-    <h2>PORTFOLIO</h2>
+    <h2 class="pb-4">PORTFOLIO</h2>
 
     <!--
        Grid
       -->
 
-    <div class="row d-flex justify-content-center pt-5">
+    <div class="row d-flex justify-content-center p-0 pt-5 p-md-5">
       <figure class="effect-julia col-11 col-md-6 ">
 
         <a href="https://mavidelaru.github.io/Countries_Search" target="_blank">
