--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
   <div class="intro container-fluid d-flex p-5 text-center ">
 
-    <div id="flex-intro" class="pt-3 ">
+    <div id="flex-intro">
 
       <!--
         Manchas flotando
