--- a/about.html
+++ b/about.html
@@ -105,10 +105,11 @@
                     <div class=" mt-5 m-d p-0 p-md-5 mr-0 ml-0 mr-md-5 ml-md-5 text-center ">
 
                         <p class="intro-text mt-4 mr-0 mr-md-5 ml-0 ml-md-5 pl-lg-5 pr-lg-5 text-left">
-                            I’m Marta from Barcelona. I love to describe me as an
-                            Interactive Front-end developer. I come from the marketing
-                            and design background that made me learn the importance of project and
-                            expectation management of various stakeholders in the digital marketing business.
+                            I’m Marta from Barcelona. I love to describe me as an Interactive Front-end
+                            developer. My background in marketing and design made me learn the
+                            importance of project and expectation management of various stakeholders in
+                            the digital marketing business.
+                            
                         </p>
 
                         <p class="intro-text mt-4 mr-0 mr-md-5 ml-0 ml-md-5 pl-lg-5 pr-lg-5 text-left">Always having an
@@ -116,7 +117,7 @@
                             details, I like to resolve design and communication problems and imagine useful
                             interaction. While the initial dream remained, its application has changed.
                             I have unified my experience and capabilities to turn my passion into a Front-End Career.
-                            Because designing something graphically has become designing visual experiences.</p>
+                            Because designing something graphically has become developing visual experiences.</p>
 
                         <p class="intro-text mt-4 mr-0 mr-md-5 ml-0 ml-md-5 mb-5 pl-lg-5 pr-lg-5 text-left"> I bring
                             strong problem-solving
