--- a/index.html
+++ b/index.html
@@ -113,11 +113,9 @@
           <div class=" mt-5 m-d p-5 d-none text-center d-md-inline">
 
             <p class="intro-text mt-4 mt-4  pr-md-5 pl-md-5">Energetic and dynamic.
-              I am passionate about technologie and creativity,
+              I am passionate about technology and innovation,
               advocating for lifelong learning. My main ambition is
               to turn creative ideas into innovative products. </p>
-
-
           </div>
         </div>
 
