Changing the intro part. I just change the images for ones that are not pixeled

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       </div>
 
       <!--Arrow scroll-->
-      <div id="scroll-arrow">
+      <div class="d-none d-md-block" id="scroll-arrow">
         <svg class="arrows">
           <path class="a2" d="M0 20 L30 52 L60 20"></path>
           <path class="a3" d="M0 40 L30 72 L60 40"></path>
