Erase br and updating CV

--- a/index.html
+++ b/index.html
@@ -108,9 +108,16 @@
 
 
           <div class=" mt-5 p-5 d-none text-center d-md-inline">
-            <p>Energetic and dynamic. I am passionate about technology and <br />
-              innovation, advocating for lifelong learning. My main ambition <br />
-              is to turn creative ideas into innovative products.</p>
+            <p>
+              Energetic and dynamic. I am passionate about technology and
+            </p>
+            <p>
+              innovation, advocating for lifelong learning. My main ambition
+            </p>
+            <p>
+              is to turn creative ideas into innovative products.
+            </p>
+          
           </div>
         </div>
 
