Updated to Product designer

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <div>
 
           <h1 class=" mt-md-2 ml-md-5 ">Hi, I'm Marta Vidal</h1>
-          <h2 class=" ml-md-5 mt-4 mb-3">Front end developer & UI designer</h2>
+          <h2 class=" ml-md-5 mt-4 mb-3">Front end developer & Product designer</h2>
 
 
           <div class=" mt-5 p-5 d-none text-center d-md-inline">
